--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  font-family: monospace;
+}
+
+::selection {
+  color: rgb(93, 199, 69);
+}
